# sfml-game-example

./: .gitignore  CMakeLists.txt  Dockerfile  Game.cpp  Game.h  PreLoad.cmake  README.md  Window.cpp  Window.h  World.h  conanfile.txt  conanprofile.ini  main.cpp  settings.json  utils.cpp  utils.h
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Settings.cpp  Settings.h  Window.cpp  Window.h  World.cpp  World.h  main.cpp  oldmain.cpp  utils.cpp  utils.h  utils.inl
test/: CMakeLists.txt  SettingsTest.cpp
